--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+    <script>
+      window.Telegram?.WebApp?.ready();
+    </script>
   </body>
 </html>
